# zeta-lang

./: Cargo.toml  LICENSE  README.md  arrays.zeta  comparisons.md  grammar.ebnf  how-to-write-zeta-in-X-minutes.md  input.zeta  rust-toolchain.toml  test_range.zeta
.github/workflows/: blank.yml
codex-dependency-graph/: Cargo.toml
codex-dependency-graph/src/: dep_graph.rs  dep_graph_tests.rs  lib.rs  module_collection_builder.rs  symbol_table.rs  topo.rs
commons/: Cargo.toml
commons/src/: atomic_utils.rs  bump.rs  lib.rs
ctrc-graph/: Cargo.toml
ctrc-graph/src/: ctrc_analyzation.rs  ctrc_constraint_solver.rs  ctrc_diagnostics.rs  ctrc_evaluation.rs  ctrc_pvg_graph.rs  ctrc_result.rs  hir_integration.rs  lib.rs  tests.rs
emberforge-compiler/: Cargo.toml  input.zeta
emberforge-compiler/src/: lib.rs  optimized_string_buffering.rs  println.rs
emberforge-compiler/src/backend/: grammar.pest
emberforge-compiler/src/midend/: mod.rs
emberforge-compiler/src/midend/copy_analysis/: drop_glue.rs  drop_tracking.rs  mod.rs
emberforge-compiler/src/midend/ir/: block_data.rs  expr_lowerer.rs  ir_conversion.rs  lowerer.rs  mod.rs  module_lowerer.rs  optimized_string_buffering.rs
emberforge-compiler/tests/: README_test_plan.md  expr_lowerer_tests.rs  test_expr_lowerer.rs
empty/: a.zeta  traits.zeta
engraver-assembly-emit/: Cargo.toml
engraver-assembly-emit/src/: backend.rs  lib.rs
engraver-assembly-emit/src/cranelift/: cranelift_backend.rs  cranelift_intrinsics.rs  mod.rs
engraver-assembly-emit/tests/: cranelift_backend_tests.rs  cranelift_intrinsics_tests.rs  test_cranelift_backend.rs  test_cranelift_intrinsics.rs
ir/: Cargo.toml
ir/src/: alias_reasoner_pass.rs  analysis_context.rs  ast.rs  borrow_checker.rs  borrow_checking_pass.rs  context.rs  diagnostics_context.rs  hir.rs  ir_conversion.rs  ir_hasher.rs  layout.rs  lib.rs  pretty.rs  sea_hasher.rs  span.rs  ssa_ir.rs  tokens.rs
ir/src/errors/: error.rs  mod.rs  reporter.rs  type_error.rs
ir/src/registry/: global_registry.rs  mod.rs
ir/tests/: sea_hasher_tests.rs  test_sea_hasher.rs
iris-math/: Cargo.toml
lib/zeta/: intrinsics.zeta  libc.zeta  os_intrinsics.zeta
lib/zeta/lang/: arrays.zeta  intrinsics.zeta  maths.zeta  mem.zeta  pointer.zeta  ranges.zeta  result.zeta  traits.zeta
lib/zeta/utils/: array_list.zeta
scribe-parser/: Cargo.toml
scribe-parser/src/: arena_ast.rs  arena_parser.rs  ctrc_integration_demo.rs  diagnostics.rs  grammar.pest  hir_lowerer.rs  lib.rs  optimized_string_buffering.rs  parser.rs
scribe-parser/src/hir_lowerer/: context.rs  decl_lowering.rs  expr_lowering.rs  lambda_hoisting.rs  mod.rs  module_lowering.rs  mono.rs  stmt_lowering.rs  tests.rs  utils.rs
scribe-parser/src/parser/: container_declarations.rs  declaration_parser.rs  declarations.rs  descent_parser.rs  expressions.rs  functions.rs  integration_tests.rs  misc.rs  mod.rs  parser_types.rs  pratt_expr_parser.rs  statement_parser.rs  statements.rs  tests.rs
scribe-parser/src/tokenizer/: cursor.rs  lexer.rs  mod.rs  tokens.rs
scribe-parser/tests/: grammar_pest_tests.rs  hir_lowering_tests.rs  if_for_mut_tests.rs  struct_init_syntax.rs  test_grammar.rs
scribe-parser/tests/parser/: declarations.rs  deref.rs  diagnostic_tests.rs  functions.rs  imports_modules.rs  mod.rs  (+3 more)
sentinel-typechecker/: Cargo.toml
sentinel-typechecker/src/: lib.rs  move_state.rs  type_checker.rs  type_checker_ctx.rs  type_context.rs  type_error.rs
smelter-optimizer/: Cargo.toml
smelter-optimizer/src/: lib.rs  pass.rs  pass_manager.rs
src/: bump.rs  compilation_passes.rs  file_handling.rs  input.zeta  link.rs  main.rs  main_structs.rs  repro.zeta  test_fix.zeta
src/benches/: main.rs
tests/: README.zeta-tests.md  intrinsics_zeta_tests.rs  test_zeta_fixtures.rs
theory/: AsyncModel.md  Concurrency.md  MemoryModel.md  WIT.md
zeta/: Cargo.toml
zeta-compiler-api/: Cargo.toml
zeta-compiler-api/src/: compilation_passes.rs  file_handling.rs  file_loader.rs  io_uring_file_loader.rs  lib.rs  link.rs  main_structs.rs  std_file_loader.rs
zeta-lsp/: Cargo.toml
zeta-lsp/src/: dispatch.rs  docs.rs  lib.rs  lsp_diagnostics.rs  main.rs  semantic_tokens.rs  server.rs  state.rs  text_utils.rs  urls.rs
zeta/src/: main.rs
zeta/src/vm/: eventloop.rs  events.rs  fibers.rs  frames.rs  functions.rs  heap.rs  interpreter.rs  mod.rs  println.rs  profiler.rs  stack.rs  string_pool.rs  virtualmachine.rs
zeta/src/vm/instruction_handlers/: arithmetic.rs  array_ops.rs  class_ops.rs  control_flow.rs  memory.rs  mod.rs  pointer_ops.rs  stack_ops.rs  type_ops.rs
zeta/src/vm/memory/: frames.rs  heap.rs  interfaces.rs  mod.rs  regions.rs  stack.rs  string_pool.rs
zeta_compiler/: Cargo.toml
zeta_compiler/src/: ast.rs  compiler.rs  grammar.pest  main.rs  mod.rs  parser.rs
zeta_utilities/: Cargo.toml
zeta_utilities/src/: arena.rs  bump.rs  lib.rs  string_pool.rs
zetac/: Cargo.toml
zetac/src/: ast.rs  async_compiler.rs  compiler.rs  grammar.pest  lib.rs  main.rs  mod.rs  parser.rs  println.rs
zetac/src/backend/: compiler.rs  cranelift_backend.rs  mod.rs
zetac/src/codegen/: mod.rs  utils.rs
zetac/src/codegen/cranelift/: bytecode_translator.rs  compiler.rs  compiler_from_ir.rs  expr_compiler.rs  mod.rs  stmt_compiler.rs
zetac/src/codegen/ir/: ir_buffer.rs  ir_compiler.rs  mod.rs  module.rs
zetac/src/codegen/ir/optimization/: mod.rs  pass.rs  pass_manager.rs
zetac/src/codegen/ir/stmt/: ir_expr_compiler.rs  ir_stmt_compiler.rs  mod.rs
zetac/src/frontend/: ast.rs  hir_lowerer.rs  lexer.rs  macros.rs  mod.rs  parser.rs  stmt_parser.rs  tokens.rs
zetac/src/midend/ir/: hir.rs  lowerer.rs  mod.rs  ssa_ir.rs
zetac/src/midend/type_checker/: context.rs  mod.rs  type_checker.rs  type_resolver.rs
zetac/src/midend/type_checker/errors/: error.rs  reporter.rs
zetac/src/midend/type_checker/rules/: mod.rs  rule.rs  type_inference.rs
zetaruntime/: Cargo.toml
zetaruntime/src/: arena.rs  bump.rs  fiber.rs  lib.rs  string_pool.rs
zetaruntime/tests/: test_fiber.rs
zetaup/: Cargo.toml
zetaup/src/: main.rs
zvm/: Cargo.toml
(+21 files in other folders)
