[package]
name = "zeta-lang"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true
opt-level = 3

[workspace]
members = [
    "ir",
    "scribe-parser",
    "emberforge-compiler",
    "codex-dependency-graph",
    "sentinel-typechecker",
    "engraver-assembly-emit",
    "smelter-optimizer",
    "zeta_utilities",
    "iris-math"
]

[dependencies]
snmalloc-rs = "0.7.4"
scribe-parser = { path = "./scribe-parser" }
emberforge-compiler = { path = "./emberforge-compiler" }
#smelter-optimizer = { path = "./smelter-optimizer" }
walkdir = "2.5.0"
codex-dependency-graph = { path = "./codex-dependency-graph" }
zetaruntime = { path = "zeta_utilities" }
engraver-assembly-emit = { path = "./engraver-assembly-emit" }
ir = { path = "./ir" }
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
sentinel-typechecker = { path = "./sentinel-typechecker" }
