[package]
name = "zeta-lang"
version = "0.2.0-alpha"
edition = "2024"

[profile.release]
opt-level = 3
debug = "line-tables-only"
strip = "debuginfo"
lto = "thin"
codegen-units = 1

[workspace]
members = [
    "ir",
    "scribe-parser",
    "emberforge-compiler",
    "codex-dependency-graph",
    "sentinel-typechecker",
    "engraver-assembly-emit",
    "zeta_utilities",
    "iris-math",
    "zeta-lsp",
    "zeta-compiler-api"
]

[dependencies]
snmalloc-rs = "0.7.4"
zeta-compiler-api = { path = "./zeta-compiler-api"}
walkdir = "2.5.0"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
