[package]
name = "ctrc-graph"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
thiserror = "2.0.12"
fxhash = "0.2.1"
zetaruntime = { path = "../zeta_utilities" }
iris-math = { path = "../iris-math" }
ir = { path = "../ir" }
dashmap = "7.0.0-rc2"
codex-dependency-graph = { path = "../codex-dependency-graph" }