
[package]
name = "emberforge-compiler"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
lazy_static = "1.5.0"
thiserror = "2.0.12"
seahash = "4.1.0"
zetaruntime = { path = "../zetaruntime" }
ir = { path = "../ir" }
tokio = { version = "1.36", features = ["full"] }
rayon = "1.10.0"
smallvec = "1.15.0"
arrayvec = "0.7.6"