[package]
name = "engraver-assembly-emit"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
thiserror = "2.0.17"
ir = { path = "../ir" }
cranelift = "0.132.2"
cranelift-module = "0.132.2"
cranelift-codegen = "0.132.2"
cranelift-object = "0.132.2"
cranelift-frontend = "0.132.2"
smallvec = "2.0.0-alpha.12"
zetaruntime = { path = "../zeta_utilities" }
