[package]
name = "zeta-lsp"
version = "0.2.0-alpha"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.103"
lsp-server = "0.9.0"
lsp-types = "0.97.0"
serde_json = "1.0.150"
zeta-compiler-api = { path = "../zeta-compiler-api"}
sentinel-typechecker = { path = "../sentinel-typechecker"}
ir = { path = "../ir"}
url = "2.5.8"

[profile.release]
opt-level = 3
debug = "line-tables-only"
strip = "debuginfo"
lto = "thin"
codegen-units = 1
