[package]
name = "zeta"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
zetac = { path = "../zetac" }
ir = { path = "../ir" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

seahash = "4.1.0"

clap = { version = "4.5.40", features = ["derive"] }
radix_trie = "0.2.1"
rayon = "1.10.0"
crossbeam = "0.8.4"
mimalloc = "0.1.46"