
[package]
name = "zetac"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
cranelift = "0.120.0"
cranelift-module = "0.120"
cranelift-jit = "0.120"
cranelift-object = "0.120.0"
cranelift-native = "0.120.0"
ir = { path = "../ir" }

ahash = "0.8.12"

random = "0.14.0"

enum-map = "3.0.0-beta.2"

lazy_static = "1.5.0"
anyhow = "1.0.98"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
rayon = "1.10.0"