
[package]
name = "zetac"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
cranelift = "0.121.0"
cranelift-module = "0.121.0"
cranelift-jit = "0.121.0"
cranelift-object = "0.121.0"
cranelift-native = "0.121.0"
ir = { path = "../commons" }

dashmap = "7.0.0-rc2"

enum-map = "3.0.0-beta.2"
trc = "1.2.4"

lazy_static = "1.5.0"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
rayon = "1.10.0"
rand = "0.9.1"
parking_lot = "0.12.4"